--- a/css/style-bem.css
+++ b/css/style-bem.css
@@ -15,6 +15,11 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: fixed;
+  z-index: 1;
+}
+
+.navbar .hamIcon {
+  font-size: 25px;
 }
 
 .navbar__logo {
@@ -23,6 +28,7 @@
 }
 
 .navbar__list {
+  display: none;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -65,6 +71,21 @@
   -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
           box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+}
+
+@media (min-width: 769px) {
+  .hamIcon {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar__list {
+    display: none;
+  }
+  .navbar__list.toggleCls {
+    display: block;
+  }
 }
 
 section {
