socials flex-wrap

--- a/css/style-bem.scss
+++ b/css/style-bem.scss
@@ -181,6 +181,9 @@ section {
 
     &__socials {
         padding: 40px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
 
         a {
             padding: 20px;
