--- a/css/style-bem.css
+++ b/css/style-bem.css
@@ -186,6 +186,14 @@ section img {
 
 .banner__socials {
   padding: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .banner__socials a {
