--- a/css/style-bem.scss
+++ b/css/style-bem.scss
@@ -34,8 +34,11 @@ $mon: "montserrat";
             &__list {
                 background-color: $white;
                 list-style: none;
-                padding-top: 50px;
-                padding-left: 100px;
+                padding-top: 10px;
+                padding-right: 10%;
+                display: flex;
+                flex-direction: column;
+                text-align: right;
 
                 li {
                     padding: 20px;
@@ -322,6 +325,106 @@ section {
     font-weight: 600;
     background-color: $pink;
     box-shadow: $shadow
+}
+
+.blogs {
+    padding: 90px 15%;
+    
+    &__image {
+        width: 30%;
+        height: 30%;
+    }
+
+    &__section {
+        display: flex;
+        margin: 50px 0px;
+        justify-content: space-between;
+        border-bottom: 1px $purple solid;
+        padding-bottom: 50px;
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        margin-left: 60px;
+
+        &--title {
+            font-family: $mon;
+            color: $purple;
+            font-size: 20px;
+        }
+
+        &--preview {
+            font-family: $mon;
+            color: $purple;
+            line-height: 1.5;
+            margin-top: 10px;
+            width: 100%;
+            font-size: 12px;
+        }
+
+        &--link {
+            font-family: $mon; 
+            font-weight: bold;
+            color: $pink;
+            font-size: 15px;
+        }
+
+        a:hover {
+            color: $lilac;
+        }
+    }
+
+    &__pages {
+        display: flex;
+        justify-content: flex-end;
+        
+        a {
+            text-decoration: none;
+            font-family: $mon;
+            font-size: 25px;
+            margin: 10px;
+            color: $purple;
+            font-weight: bold;
+        }
+
+        a:hover {
+            color: $pink;
+        }
+    }
+}
+
+.y2k {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 120px 10%;
+
+    img {
+        width: 100%;
+        max-width: 700px;
+        margin-bottom: 40px;
+    }
+
+    &__content {
+        padding-left: 50px;
+
+        &--title {
+            font-family: $mon;
+            color: $purple;
+            font-size: 20px;
+        }
+
+        &--para {
+            font-family: $mon;
+            color: $purple;
+            line-height: 1.5;
+            margin-top: 10px;
+            width: 100%;
+            font-size: 15px;
+            text-align: justify;
+        }
+    }
 }
 
 .footer {
