--- a/css/style-bem.scss
+++ b/css/style-bem.scss
@@ -405,25 +405,50 @@ section {
         max-width: 700px;
         margin-bottom: 40px;
     }
+}
 
-    &__content {
-        padding-left: 50px;
+.gallery {
+    display: flex;
+    flex-direction: column;
+    padding: 120px 10%;
+    text-align: center;
 
-        &--title {
-            font-family: $mon;
-            color: $purple;
-            font-size: 20px;
+    &__banner {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 20px;
+
+        img {
+            width: 50%;
         }
+    }
 
-        &--para {
-            font-family: $mon;
-            color: $purple;
-            line-height: 1.5;
-            margin-top: 10px;
-            width: 100%;
-            font-size: 15px;
-            text-align: justify;
+    &__slc {
+        padding-top: 100px;
+
+        img {
+                width: 33%;
         }
+    }
+}
+
+.room {
+    padding: 120px 10%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    &__title {
+        font-family: $mon;
+        color: $purple;
+        font-size: 20px;
+        padding-bottom: 30px;
+    }
+
+    img {
+        width: 19.6%;
     }
 }
 
